src/test/ui/rfc-2126-extern-in-paths/non-existent-2.stderr
error[E0433]: failed to resolve: could not find `xcrate` in `extern`
  --> $DIR/non-existent-2.rs:4:21
   |
LL |     let s = extern::xcrate::S;
   |                     ^^^^^^ could not find `xcrate` in `extern`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
